[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/UI_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/font/LibreBaskerville-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/paper_theme.tres" type="Theme" id=3]
[ext_resource path="res://widgets/HealthPointsTrackerWidget/HealthPointsTrackerWidget.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/ripped_paper.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[node name="HealthPointsTrackerWidget" type="NinePatchRect"]
margin_left = 1.0
margin_right = 354.0
margin_bottom = 352.0
theme = ExtResource( 1 )
texture = ExtResource( 5 )
patch_margin_left = 87
patch_margin_top = 94
patch_margin_right = 82
patch_margin_bottom = 85
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
builderPath = "res://widgets/HealthPointsTrackerWidget/HealthPointsTrackerBuilder.tscn"

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 22.0
margin_right = 234.0
margin_bottom = 233.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFeatureName" type="Label" parent="VBox"]
margin_right = 294.0
margin_bottom = 58.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Health Points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHealthPoints" type="Label" parent="VBox"]
margin_top = 62.0
margin_right = 294.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "40 / 50"
align = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 164.0
margin_right = 294.0
margin_bottom = 226.0

[node name="BtnSubtract1" type="Button" parent="VBox/HBox"]
margin_right = 145.0
margin_bottom = 62.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
text = "-1"

[node name="BtnAdd1" type="Button" parent="VBox/HBox"]
margin_left = 149.0
margin_right = 294.0
margin_bottom = 62.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
text = "+1"

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 230.0
margin_right = 294.0
margin_bottom = 292.0

[node name="BtnSubtract10" type="Button" parent="VBox/HBox2"]
margin_right = 145.0
margin_bottom = 62.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
text = "-10"

[node name="BtnAdd10" type="Button" parent="VBox/HBox2"]
margin_left = 149.0
margin_right = 294.0
margin_bottom = 62.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
text = "+10"
[connection signal="pressed" from="VBox/HBox/BtnSubtract1" to="." method="_on_BtnSubtract1_pressed"]
[connection signal="pressed" from="VBox/HBox/BtnAdd1" to="." method="_on_BtnAdd1_pressed"]
[connection signal="pressed" from="VBox/HBox2/BtnSubtract10" to="." method="_on_BtnSubtract10_pressed"]
[connection signal="pressed" from="VBox/HBox2/BtnAdd10" to="." method="_on_BtnAdd10_pressed"]
